--- a/package.json
+++ b/package.json
@@ -5,20 +5,19 @@
   "homepage": "https://achim.group",
   "proxy": "http://87.106.207.233:3000",
   "dependencies": {
-    "axios": "^1.0.0",
-    "dotenv": "^16.0.3",
-    "ethers": "^6.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "axios": "^1.0.0",
     "react-scripts": "^5.0.0",
-    "web-vitals": "^3.0.0"
+    "web-vitals": "^3.0.0",
+    "ethers": "^6.0.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-methods": "^7.0.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.0.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "eslint-config-next": "^15.1.6"
+    "@babel/plugin-proposal-private-methods": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
