nochmal mit version 8.0

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "ethers": "^6.0.0",
     "dotenv": "^16.0.3",
     "@uniswap/widgets": "^1.0.0",
-    "@web3-react/core": "^6.1.9",
-    "@web3-react/metamask": "^6.0.0",
-    "@web3-react/walletconnect": "^6.0.9",
+    "@web3-react/metamask": "^8.0.0",
+    "@web3-react/core": "^8.0.0",
+    "@web3-react/walletconnect": "^8.0.0"
     "react-icons": "^4.4.0",
     "react-helmet": "^6.1.0",
     "typescript": "^5.1.0"
