--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@uniswap/widgets": "^1.0.0",
     "@web3-react/metamask": "^8.0.0",
     "@web3-react/core": "^8.0.0",
-    "@web3-react/walletconnect": "^8.0.0"
+    "@web3-react/walletconnect": "^8.0.0",
     "react-icons": "^4.4.0",
     "react-helmet": "^6.1.0",
     "typescript": "^5.1.0"
