package jotai hinzugefügt in die packages

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@web3-react/walletconnect": "^8.0.0",
     "react-icons": "^4.4.0",
     "react-helmet": "^6.1.0",
-    "typescript": "^5.1.0"
+    "typescript": "^5.1.0",
+	"jotai": "^1.10.0",
+	"jotai-immer": "^1.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.0.0",
