--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
-  "name": "achimcoin-frontend",
+  "name": "widgets-cra5",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://achim.group",
-  "proxy": "http://87.106.207.233:3000",
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.0.0",
-    "axios": "^1.0.0",
-    "react-scripts": "^5.0.0",
-    "web-vitals": "^3.0.0",
-    "ethers": "^6.0.0",
-    "dotenv": "^16.0.3",
+    "@ethersproject/providers": "^5.5.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "@uniswap/sdk-core": "^7.3.0",
     "@uniswap/widgets": "^1.0.0",
-    "@web3-react/metamask": "^8.0.0",
-    "@web3-react/core": "^8.0.0",
-    "@web3-react/walletconnect": "^8.0.0",
-    "react-icons": "^4.4.0",
-    "react-helmet": "^6.1.0",
-    "typescript": "^5.1.0",
-	"jotai": "^0.0.0",
-	"jotai-immer": "^0.0.0",
-	"react-redux": "^8.0.0"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.0.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "@babel/plugin-proposal-private-methods": "^7.0.0"
+    "@walletconnect/ethereum-provider": "^1.7.1",
+    "@web3-react/core": "^8.0.22-beta.0",
+    "@web3-react/empty": "^8.0.11-beta.0",
+    "@web3-react/metamask": "^8.0.18-beta.0",
+    "@web3-react/types": "^8.0.11-beta.0",
+    "@web3-react/walletconnect": "^8.0.25-beta.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "react-scripts": "5.0.0",
+    "typescript": "^4.4.2",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "buffer": "^6.0.3",
+    "prettier": "^2.5.1"
   }
 }
