--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@ethersproject/providers": "^5.5.1",
+    "@ethersproject/units": "^5.5.0",
+    "@ethersproject/abi": "^5.5.0",
+    "@ethersproject/contracts": "^5.5.0",
+    "ethers": "^5.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
